app/assets/stylesheets/style.scss
//---------------------------- sass variables ----------------//


body %trans1{
  -webkit-transition: all 500ms cubic-bezier(0.485, 0.090, 0.095, 0.990);
  -moz-transition: all 500ms cubic-bezier(0.485, 0.090, 0.095, 0.990);
  -o-transition: all 500ms cubic-bezier(0.485, 0.090, 0.095, 0.990);
  transition: all 500ms cubic-bezier(0.485, 0.090, 0.095, 0.990); /* custom */

  -webkit-transition-timing-function: cubic-bezier(0.485, 0.090, 0.095, 0.990);
  -moz-transition-timing-function: cubic-bezier(0.485, 0.090, 0.095, 0.990);
  -o-transition-timing-function: cubic-bezier(0.485, 0.090, 0.095, 0.990);
  transition-timing-function: cubic-bezier(0.485, 0.090, 0.095, 0.990); /* custom */
}

//----------------------------type----------------------------//
body{
  font-family: 'Arvo', serif;
}
h1,h2,h3,h4,h5,h6{
  font-family: 'Arvo', serif;
}
ul.right{
  list-style:none;
  background-color:transparent;
}

.arrow-down{
  @extend %trans1;
  width: 0;
  height: 0;
  margin:20px auto;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;

  border-top: 15px solid #ffffff;
}

.arrow-down:hover{
  margin-top:30px;
}

.header{
  position:relative;

}

.top-bar-section li:not(.has-form) a:not(.button),#main_nav{
  background-color:transparent;
}

// .top-bar, .tab-bar{
//   background-color:$menu_primary;
//   position:fixed !important;
//   width:100%;
//   z-index:500;
// }

.name,.title{
  max-width:190px;
  a {background-color:transparent !important;}
}

.left-off-canvas-menu{

}
ul.off-canvas-list li a{

}
ul.off-canvas-list li a:hover{
  color:#fff;
}
ul.off-canvas-list li label{
  background-color:none transparent !important;
  background:none repeat scroll 0 0 transparent;
  color:#fff;
}

.row{
  max-width:70em;
}

.row_full{
  max-width:100%;
}

#hero-home{
  padding:200px 0px 200px 0px;
  background:url('holyoke.jpg') no-repeat top center fixed;
  h1{color:#fff;}
}

.hero{
  padding:250px 0px 0px 0px;
}

footer{
  -moz-animation:colorchange 10s infinite alternate;
  -o-animation:colorchange 10s infinite alternate;
  -webkit-animation:colorchange 10s infinite alternate;
}

.section{
  padding: 0px 0px 0px 0px;
}
.section:last-child{
  padding:0px 0px 0px 0px;
}

.section-two{
  background-color:#fff;
  min-height:500px;
  position:relative;
  -webkit-box-shadow: 1px -13px 21px 0px rgba(0, 0, 0, 0.48);
  -moz-box-shadow:    1px -13px 21px 0px rgba(0, 0, 0, 0.48);
  box-shadow:         1px -13px 21px 0px rgba(0, 0, 0, 0.48);
}
.images .description{
  text-align:center;
  margin-top:-100px;
  opacity:0;
  @extend %trans1;
}
.images:hover .description {
  margin-top:10px;
  opacity:1;
}

.section-two,.section-three{
  .title{text-align:center;}
}

ul{margin-left:0px;}

.logo {
  width:200px;
  height:auto;
}

.main-content {
  padding-bottom: 100px;
  position:relative;
  h1 {
    padding-left: 20px;
  }
  .landmark-item {
    @extend %trans1;
    padding: 20px 20px;
    border-bottom: 1px solid #ededed;

    p,h1,h2,h3,h4,h5 {
      margin-bottom: 0px;
    }

    &:last-child {
      border-bottom: 0px transparent;
    }

    &:hover {
      padding: 25px 20px;
    }

    .address {
      font-style: italic;
      font-weight: lighter;
    }

    section {
      .button {
        margin-top: 10px;
      }
    }
  }
}

footer{
  background-color:#494949;
  color:#fff;
  padding:50px 0px 50px 0px;
}

input{
  padding:10px;
  width:100%;
  border-radius:0px;
  border:0px transparent;
  outline:0px transparent;
  font-family: 'Arvo', serif;
  font-size:15pt;
}


.margin-top {
  margin-top: 50px;
}

.landmark-item {
}

.small-btn {
  padding: 10px;
}

#hero-home {
  padding: 100px 0px;
}

@media only screen and (max-width: 768px) {
}

@media only screen and (max-width:400px) {

}

